# usv16_simulation

./: README.me
rqt_mission_panel/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_mission_panel/include/rqt_mission_panel/: my_plugin.h
rqt_mission_panel/scripts/: rqt_mission_panel
rqt_mission_panel/src/: my_plugin.cpp  my_plugin.ui  my_plugin_backup.ui
rqt_usv_panel/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_usv_panel/include/rqt_usv_panel/: .kdev_include_paths  my_plugin.h
rqt_usv_panel/scripts/: rqt_usv_panel
rqt_usv_panel/src/: my_plugin.cpp  my_plugin.ui
test_plug/rqt_test/: CMakeLists.txt  package.xml  plugin.xml
usv16_clock/: CMakeLists.txt  package.xml
usv16_clock/launch/: usv16_clock.launch
usv16_clock/src/: usv16_clock_main.cpp
usv16_msgs/: CMakeLists.txt  package.xml
usv16_msgs/msg/: Usv16ActuatorInputs.msg  Usv16ActuatorOutputs.msg  Usv16Compass.msg  Usv16Mission.msg  Usv16State.msg  Usv16UR.msg
usv16_sim/: .gitignore  CMakeLists.txt  README.txt  package.xml
usv16_sim/config/: usv16_sim_params.yaml
usv16_sim/include/usv16_sim/: usv16_dyn.h  usv16_dyn_types.h  usv16_eom_3dof.h  usv16_ros_interface.h
usv16_sim/launch/: usv16_sim.launch
usv16_sim/lib/: usv16_dyn.cpp
usv16_sim/msg/: Usv16ActuatorInputs.msg  Usv16State.msg
usv16_sim/src/: test_listener.cpp  usv16_eom_3dof.cpp  usv16_ros_interface.cpp  usv16_sim_node.cpp
usv16_simulator/: CMakeLists.txt  package.xml
usv16_simulator/action/: PathPlanner.action  WaypointTracking.action
usv16_simulator/backup/: PlannerMain.cpp  backup_simulator.launch  included.launch  path_controller.cpp  teleop_keyboard (alternative).cpp
usv16_simulator/config/: Config.txt  ControlActions (copy 1).txt  ControlActions.txt  IntermediateControlActions.txt  control_params.yaml  crudWAMVSimulation.rviz  crudWAMVSimulation.rviz.orig  notWorking.rviz  rqt_gui.perspective  rviz.rviz  simulation.rviz  simulation.rviz.orig  usv_simulator.perspective
usv16_simulator/config/obstacles/: ObstaclesCenter.txt
usv16_simulator/doc/doxygen/: Doxyfile
usv16_simulator/doc/doxygen/html/: annotated.html  class_teleop_ship-members.html  class_teleop_ship.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  index.html
usv16_simulator/doc/doxygen/html/search/: classes_0.js
usv16_simulator/doc/doxygen/latex/: annotated.tex  class_teleop_ship.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  refman.tex
usv16_simulator/include/usv16/: QuadProg++.h  los_guidance_law.h  maneuver.h  maneuver_manager.h  motion_controller.h  path_planner_client.h  path_planner_server.h  pf_controller.h  ship_dynamics_interface.h  sk_controller.h  thrust_allocation_law.h  user_interface.h  usv16.h  viz_trajectory.h  waypoint_tracking_client.h  waypoint_tracking_server.h
usv16_simulator/include/usv16/path_planner/: Action.h  ConfigFile.h  MyHeap.h  Parser.h  Tokenizer.h  TrajectoryPlanner.h  Utils.h
usv16_simulator/launch/: gui.launch  simulator.launch  simulator.launch.orig  simulator_gui_control.launch  simulator_mission_planner.launch  simulator_mission_planner.launch.orig  slamy.launch
usv16_simulator/meshes/: Ship.STL  back_arm.STL  front_arm.STL  owls_nest.STL  platform.STL  port_pontoon.STL  starboard_pontoon.STL
usv16_simulator/meshes/vbass/: lcg_bar.STL  owl_eye_link.STL  port_pontoon_link.STL  stbd_pontoon_link.STL  superstructure_link.STL
usv16_simulator/meshes/wamv/: front_arm.STL  starboard_pontoon.STL
usv16_simulator/models/seatech/: model.config  model.sdf  seatech.dae
usv16_simulator/msg/: Usv16State.msg  actuator.msg  maneuver_list.msg
usv16_simulator/src/: QuadProg++.cpp  los_guidance_law.cpp  los_guidance_node.cpp  map_reference_publisher.cpp  motion_controller.cpp  motion_controller_node.cpp  path_planner_node.cpp  path_planner_server.cpp  sensor_state_publisher.cpp  ship_dynamics_interface.cpp  ship_dynamics_node.cpp  teleop_keyboard.cpp  thrust_allocation_law.cpp  thrust_allocation_node.cpp  user_interface.cpp  user_interface_node.cpp  usv16.cpp  viz_trajectory.cpp  viz_trajectory_node.cpp  viz_trajectory_old_KEEP.cpp  waypoint_tracking_client.cpp  waypoint_tracking_server.cpp
usv16_simulator/src/path_planner/: Action.cpp  ConfigFile.cpp  Parser.cpp  Tokenizer.cpp  TrajectoryPlanner.cpp  Utils.cpp
usv16_simulator/srv/: task_input.srv
usv16_simulator/urdf/: Hokuyo.urdf.xacro  SW_gen_WAMV.urdf.xacro  VLP-16.urdf.xacro  crudWAMV.urdf.xacro  example.urdf.xacro  niceWAMV.urdf.xacro  ship.urdf  ship.urdf.xacro  vbass.urdf.xacro  vbass.urdf.xacro.orig  wamv.urdf.xacro
usv16_simulator/world/: example.world  practiceWorld  sandIsland.world  seatech.world
usv16_viz/: CMakeLists.txt  package.xml
usv16_viz/config/: rviz.rviz
usv16_viz/include/usv16_viz/: usv16_viz.h
usv16_viz/launch/: included.launch  simulator.launch
usv16_viz/src/: los_guidance.cpp  path_controller.cpp  ship_dynamics.cpp  task_manager.cpp  usv16_viz.cpp  usv16_viz_node.cpp
